2015-02-01  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix binary file opening on Windows.

	* datrie/trie.c (trie_new_from_file, trie_save):
	  - Add "b" to fopen() modes, so the binary file is opened properly
	    on Windows.

	  Thanks phongphan.p for the report and initial patch.

2014-01-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.ac:
	  - Bump library revision to reflect code changes.

	* NEWS, configure.ac:
	=== Version 0.2.8 ===

2014-01-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Improve documentation.

	* datrie/triedefs.h:
	  - Refine descriptions of data types.
	* datrie/trie.c (trie_iterator_new):
	  - Fix typo on trie_root() mentioning.
	* datrie/trie.c (trie_store, trie_store_if_absent):
	  - Adjust wording.
	* datrie/alpha-map.h, datrie/trie.h:
	  - Add detailed description of AlphaMap and Trie types.

2014-01-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Clarify message in test_nonalpha.

	* tests/test_nonalpha.c (main):
	  - Clarify message on false key duplication.

2014-01-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add test on keys with non-alphabet input chars.

	* tests/Makefile.am, +tests/test_nonalpha.c:
	  - Add test to ensure that operations on keys with non-alphabet
	    input chars fail.

2014-01-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fail trie operations on non-alphabet inputs.

	alpha_map_char_to_trie() tried to return TRIE_CHAR_MAX to indicate
	out-of-range error. But this value is indeed valid in trie operations.
	Doing so could allow false key duplication when different non-alphabet
	chars and TRIE_CHAR_MAX itself were all mapped to TRIE_CHAR_MAX.
	So, let's fail all trie operations on non-alphabet input chars.

	* datrie/alpha-map-private.h, datrie/alpha-map.c
	  (alpha_map_char_to_trie):
	  - Make alpha_map_char_to_trie return TrieIndex type, using
	    TRIE_INDEX_MAX to indicate out-of-range error.